--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
     <header>
         <div class="container">
-            <h2 class="logo">NETFLIX</h2>
+            <!--<h2 class="logo">NETFLIX</h2>-->
+            <img class="logo-netflix" src="assets/img/logo/logo_netflix01.png" alt="">
             <nav>
                 <a href="#">Início</a>
                 <a href="#">Séries</a>
@@ -31,6 +32,13 @@
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">PENNY DREADFUL</h3>
+                <div class="informacoes-adicionais">
+                    <h4 class="relevancia info-add">82% relevante</h4>
+                    <h4 class="ano info-add">2014</h4>
+                    <h4  class="info-add">3 Temporadas</h4>
+                    <h4 class="resolucao info-add">1080p</h4>
+                    <h4 class="audio info-add">5.1</h4>
+                </div>
                 <p class="descricao">Frankenstein, Conde Drácula, Dorian Gray e outros personagens clássicos da literatura vivem na Londres da Revolução Industrial, uma cidade repleta de mistérios sobrenaturais.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
