Refinamento da interface

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                         MAIS INFORMACOES
                     </button>
                 </div>
+                <div class="genero-container">
+                    <h4>Gênero:</h4>
+                    <h4 class="genero-elemento">Ficção Científica, Fantasia, Drama, Mistério</h4>
+                </div>
             </div>
         </div>
     </main>
